2008-12-13  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* win32/common/config.h:
	  Update to CVS version.

	* win32/common/config.h.in:
	  Hardcode path to plugin install helper exe, just like we hardcode
	  the paths in core. Removes another source of VCS conflicts for
	  people hacking gst-plugins-base on systems with autotools.

2008-12-13  Edward Hervey  <bilboed@gmail.com>

	* m4/Makefile.am:
	And a couple more .m4 that don't exist anymore with gettext 0.17

2008-12-13  Edward Hervey  <edward.hervey@collabora.co.uk>


	* m4/Makefile.am:
	inttypes.m4 hasn't been available since gettext-0.15, and since we now
	require gettext >= 0.17 ... we can remove it from the list of files to
	dist.

2008-12-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_slave_method_get_type),
	(gst_base_audio_sink_class_init):
	* gst-libs/gst/audio/gstbaseaudiosink.h:
	* gst-libs/gst/audio/gstbaseaudiosrc.c:
	(gst_base_audio_src_slave_method_get_type),
	(gst_base_audio_src_class_init):
	* gst-libs/gst/audio/gstbaseaudiosrc.h:
	API: Add GST_TYPE_BASE_AUDIO_(SRC|SINK)_SLAVE_METHOD to the
	public API. This is needed for the C++ bindings to be able
	to use this base classes. Fixes bug #564200, #564206.

2008-12-12  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst-libs/gst/cdda/gstcddabasesrc.c:
	(gst_cdda_base_src_handle_event):
	Remove erroneous gst_buffer_ref().
	* tests/check/libs/rtp.c: (GST_START_TEST):
	Don't forget to unref the buffer once you're done with it.

2008-12-12  Stefan Kost  <ensonic@users.sf.net>

	* gst/playback/gstplaybin.c:
	* gst/playback/gstplaybin2.c:
	  XRef to GstXOverlay.

2008-12-12  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/playback/gsturidecodebin.c: (gst_uri_decode_bin_finalize):
	Free the factory array when finalizing.
	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_base_init):
	Use a GstStaticPadTemplate since the src pad caps are fixed.
