@@ -37,6 +37,9 @@
     <xi:include href="xml/element-oggmux.xml" />
     <xi:include href="xml/element-playbin.xml" />
     <xi:include href="xml/element-playbin2.xml" />
+    <xi:include href="xml/element-tcpclientsrc.xml" />
+    <xi:include href="xml/element-tcpclientsink.xml" />
+    <xi:include href="xml/element-tcpserversrc.xml" />
     <xi:include href="xml/element-tcpserversink.xml" />
     <xi:include href="xml/element-textoverlay.xml" />
     <xi:include href="xml/element-textrender.xml" />
